--- a/index.html
+++ b/index.html
@@ -1327,8 +1327,12 @@
 
         function submitForm() {
             const formData = {
-                name: document.getElementById('name').value.trim(),
+                DAIname: document.getElementById('DAIname').value.trim(),
+                DAInamehurigana: document.getElementById('DAInamehurigana').value.trim(),
                 phone: document.getElementById('phone').value.trim(),
+                SATUname: document.getElementById('SATUname').value.trim(),
+                SATUnamehurigana: document.getElementById('SATUnamehurigana').value.trim(),
+                dateofbirth: document.getElementById('dateofbirth').value.trim(),
                 visitCount: visitCount,
                 seibetuCount: seibetuCount,
                 selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
