--- a/index.html
+++ b/index.html
@@ -1346,7 +1346,7 @@
             };
 
             // フォームデータのチェック
-            if (!formData.name) {
+            if (!formData.DAIname) {
                 alert('お名前を入力してください。');
                 return;
             }
