--- a/index.html
+++ b/index.html
@@ -1369,7 +1369,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `　　　　【予約フォーム】\n\n≪代表者情報≫\n〈お名前〉${formData.DAIname}\n〈ふりがな〉${formData.DAInamehurigana}\n〈電話番号〉${formData.phone}\n〈ご来店回数〉${formData.visitCount}\n\n≪撮影者情報≫\n〈お名前〉${formData.SATUname}\n〈ふりがな〉${formData.SATUnamehurigana}\n〈生年月日〉${formData.dateofbirth}\n〈ご来店回数〉${formData.seibetuCount}\n〈メニュー〉\n・${formData.selectedSymptom}\n〈オプション〉\n・${formData.irradiationsCount}\n\n【希望日時】\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ\n⇒${formData.message}`
+                text: `　　　　【予約フォーム】\n\n≪代表者情報≫\n〈お名前〉${formData.DAIname}\n〈ふりがな〉${formData.DAInamehurigana}\n〈電話番号〉${formData.phone}\n〈ご来店回数〉${formData.visitCount}\n\n≪撮影者情報≫\n〈お名前〉${formData.SATUname}\n〈ふりがな〉${formData.SATUnamehurigana}\n〈生年月日〉${formData.dateofbirth}\n〈ご来店回数〉${formData.seibetuCount}\n\n【メニュー】\n・${formData.selectedSymptom}\n〈オプション〉\n・${formData.irradiationsCount}\n\n【希望日時】\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ\n⇒${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
