--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
     </div>
 
     <div class="container">
-        <h1>アンケート<br>アンケートフォーム</h1>
+        <h1>矢板偀接骨院<br>アンケートフォーム</h1>
         <div class="info-text">以下全て入力後【アンケート送信】ボタンを押してください。</div>
         <div class="label">氏名（漢字）</div>
         <textarea id="message" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
