--- a/index.html
+++ b/index.html
@@ -834,6 +834,8 @@ const chanceText = formData.chanceCount && formData.chanceCount.length
   ? '\n' + formData.chanceCount.map(item => `・${item}`).join('\n')
   : '';
     const message7Text = formData.message7 ? `\n・${formData.message7}` : '';
+// informationCount を整形してからメッセージに埋め込む
+const formattedInformation = formData.informationCount.join('\n・');
 
     // LINEトークにメッセージを送信
     liff.sendMessages([{
