--- a/index.html
+++ b/index.html
@@ -533,20 +533,21 @@
 
 .title-with-image {
   display: flex;
-  align-items: center; /* 画像とテキストの垂直位置を中央に揃える */
-  gap: 25px; /* 画像とテキストの間隔 */
+  justify-content: center;  /* 中央揃え */
+  align-items: center;
   margin-bottom: 20px;
 }
 
 .logo-image {
-  width: 100px;  /* 必要に応じてサイズ調整可 */
+  width: 120px;      /* 必要に応じてサイズ調整可 */
   height: auto;
 }
 
-.title {
-  font-size: 24px;
-  line-height: 1.4;
-  margin: 0;
+/* スマホ向けに画像サイズ微調整（任意） */
+@media screen and (max-width: 600px) {
+  .logo-image {
+    width: 100px;
+  }
 }
 
     </style>
@@ -557,7 +558,6 @@
 <div class="container">
   <div class="title-with-image">
     <img src="https://www.dropbox.com/scl/fi/fc7hydgsaesylhxxo0qc0/_.png?rlkey=nudq0llox55v0n4xrpedv9p9i&st=h4wvxree&raw=1" alt="ケセラセラロゴ" class="logo-image" />
-    <h1 class="title">ケセラセラ<br>予約フォーム</h1>
   </div>
 
         <div class="visit-buttons">
