--- a/index.html
+++ b/index.html
@@ -1628,7 +1628,7 @@ const selectedSymptomText = formData.selectedSymptom
   : 'メニュー未選択';
 
 // irradiationsCountの整形（nullチェック）
-const irradiationsText = formData.irradiationsCount || 'なし';
+const irradiationsText = formData.irradiationsCount || '';
 
 liff.sendMessages([{
     type: 'text',
