--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             /* 画面中央に固定 */
             transform: translateY(-50%) translateX(13px);
             /* 中央配置と右ずらし */
-            background: #13ca5e;
+            background: #38c4b7;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -82,7 +82,7 @@
 
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #e7e7e7;
+            background-color: #624034;
             display: flex;
             justify-content: center;
             align-items: flex-start;
@@ -104,7 +104,7 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #13ca5e, #0fa958);
+            background: linear-gradient(135deg, #38c4b7, #208d82);
             color: white;
             padding: 20px;
             border-radius: 0 15px 0px 45px;
@@ -123,7 +123,7 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
-            background-color: #13ca5e;
+            background-color: #38c4b7;
             color: white;
             border-radius: 6px;
             font-size: 18px;
@@ -142,7 +142,7 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
-            background-color: #13ca5e;
+            background-color: #38c4b7;
             color: white;
             border-radius: 6px;
             font-size: 18px;
@@ -157,7 +157,7 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
-            background-color: #13ca5e;
+            background-color: #38c4b7;
             color: white;
             border-radius: 6px;
             font-size: 18px;
@@ -179,12 +179,12 @@
             align-items: center;
             justify-content: center;
             background: white;
-            color: #13ca5e;
+            color: #38c4b7;
             font-weight: bold;
             font-size: 0.9em;
             border-radius: 4px;
             padding: 2px 6px;
-            border: 2px solid #13ca5e;
+            border: 2px solid #38c4b7;
         }
 
         input[type="text"],
@@ -317,7 +317,7 @@
         }
 
         .calendar td.selected {
-            background-color: #13ca5e;
+            background-color: #38c4b7;
             color: #fff;
         }
 
@@ -392,7 +392,7 @@
             height: 60px;
             border: 5px solid rgba(255, 255, 255, 0.2);
             /* 薄い白で枠を柔らかく */
-            border-top-color: #00d1ff;
+            border-top-color: #38c4b7;
             /* 明るい青で目立たせる */
             border-radius: 50%;
             /* 丸い形状 */
@@ -539,7 +539,7 @@
 
         .highlight-background {
             cursor: pointer;
-            background-color: #13ca5e;
+            background-color: #38c4b7;
             padding: 10px;
             border-radius: 6px;
             font-size: 18px;
@@ -602,7 +602,7 @@
 
         input:focus,
         textarea:focus {
-            border-color: #13ca5e;
+            border-color: #38c4b7;
             outline: none;
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
         }
@@ -611,7 +611,7 @@
             padding: 12px;
             border: none;
             border-radius: 6px;
-            background-color: #13ca5e;
+            background-color: #38c4b7;
             color: #000000;
             font-size: 16px;
             cursor: pointer;
@@ -627,11 +627,11 @@
             width: 100%;
             padding: 15px;
             font-size: 18px;
-            background-color: #dc3545;
+            background-color: #16b7d2;
         }
 
         .submit-button:hover {
-            background-color: #c82333;
+            background-color: #16b7d2;
         }
 
         @media (max-width: 768px) {
@@ -680,7 +680,7 @@
             left: 50%;
             transform: translate(-50%, -10px);
             /* Y方向に上げる */
-            background-color: #13ca5e;
+            background-color: #38c4b7;
             color: #fff;
             padding: 3px 12px;
             /* ボックスのパディングを縮小 */
@@ -930,6 +930,32 @@
             if (savedPhone) document.getElementById('phone').value = savedPhone;
         });
 
+// 性別の保存値を取得して反映
+const savedGender = localStorage.getItem('selectedGender');
+if (savedGender) {
+    if (savedGender === '男性') {
+        document.getElementById('firstmr').classList.add('active');
+        mrCount = '男性';
+    }
+    if (savedGender === '女性') {
+        document.getElementById('repeatmr').classList.add('active');
+        mrCount = '女性';
+    }
+}
+
+// 来店回数の保存値を取得して反映
+const savedVisit = localStorage.getItem('visitStatus');
+if (savedVisit) {
+    if (savedVisit === '初めて') {
+        document.getElementById('firstVisit').classList.add('active');
+        visitCount = '初めて';
+    }
+    if (savedVisit === '2回目以降') {
+        document.getElementById('repeatVisit').classList.add('active');
+        visitCount = '2回目以降';
+    }
+}
+
         // スムーズスクロール
         document.querySelectorAll('.side-nav a').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
@@ -964,25 +990,25 @@
         function updateDisplayInfo() {
             const name = document.getElementById('name').value;
             const phone = document.getElementById('phone').value;
-            const mrCountText = mrCount ? `<span style="color:#13ca5e;"><strong>【性別】</strong></span><br>・${mrCount}` : '・性別が未選択です';
-            const visitCountText = visitCount ? `<span style="color:#13ca5e;"><strong>【ご来店回数】</strong></span><br>・${visitCount}` : '・来店回数が未選択です';
+            const mrCountText = mrCount ? `<span style="color:#16b7d2;"><strong>【性別】</strong></span><br>・${mrCount}` : '・性別が未選択です';
+            const visitCountText = visitCount ? `<span style="color:#16b7d2;"><strong>【ご来店回数】</strong></span><br>・${visitCount}` : '・来店回数が未選択です';
 
             // 第1希望日が選択された場合の表示
             const selectedDate1 = document.getElementById('date1').value;
             const selectedDate1Text = selectedDate1
-                ? `<span style="color:#13ca5e;"><strong>【第1希望日】</strong></span><br>・${formatDateTime(selectedDate1)}`
+                ? `<span style="color:#16b7d2;"><strong>【第1希望日】</strong></span><br>・${formatDateTime(selectedDate1)}`
                 : '・第1希望日が未選択です';
 
             // 第2希望日が選択された場合の表示
             const selectedDate2 = document.getElementById('date2').value;
             const selectedDate2Text = selectedDate2
-                ? `<span style="color:#13ca5e;"><strong>【第2希望日】</strong></span><br>・${formatDateTime(selectedDate2)}`
+                ? `<span style="color:#16b7d2;"><strong>【第2希望日】</strong></span><br>・${formatDateTime(selectedDate2)}`
                 : '・第2希望日が未選択です';
 
             // 修正ボタン付きのHTMLを作成
             document.getElementById('displayInfo').innerHTML = `
         <div class="info-row">
-            <p><span style="color:#13ca5e;"><strong>【お名前】</strong></span><br>・${name}</p>
+            <p><span style="color:#16b7d2;"><strong>【お名前】</strong></span><br>・${name}</p>
             <button class="edit-button" onclick="scrollToElement('name')">修正する</button>
         </div>
         <hr>
@@ -992,7 +1018,7 @@
         </div>
         <hr>
         <div class="info-row">
-            <p><span style="color:#13ca5e;"><strong>【電話番号】</strong></span><br>・${phone}</p>
+            <p><span style="color:#16b7d2;"><strong>【電話番号】</strong></span><br>・${phone}</p>
             <button class="edit-button" onclick="scrollToElement('phone')">修正する</button>
         </div>
         <hr>
@@ -1082,6 +1108,11 @@
             document.getElementById('repeatVisit').classList.remove('active');
             /* クリックされたボタンを選択状態にする */
             element.classList.add('active');
+    // 選択された性別を取得して保存
+    visitCount = element.innerText;
+    localStorage.setItem('visitStatus', visitCount);
+
+    console.log('選択された性別:', visitCount);
             /* 選択された訪問回数を変数に格納 */
             visitCount = element.innerText;
         }
@@ -1092,6 +1123,11 @@
             document.getElementById('repeatmr').classList.remove('active');
             /* クリックされたボタンを選択状態にする */
             element.classList.add('active');
+    // 選択された性別を取得して保存
+    mrCount = element.innerText;
+    localStorage.setItem('selectedGender', mrCount);
+
+    console.log('選択された性別:', mrCount);
             /* 選択された訪問回数を変数に格納 */
             mrCount = element.innerText;
         }
@@ -1148,7 +1184,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪予約フォーム≫\n【お名前】：${formData.name}\n【電話番号】：${formData.phone}\n【性別】：${formData.mrCount}\n【ご来院回数】：${formData.visitCount}\n【希望日時】：\n・第一希望日\n${formData.dates[0]}\n・第二希望日\n${formData.dates[1]}\n【メッセージ】：${formData.message}`
+                text: `≪BIG HANDS予約情報≫\n【お名前】\n・${formData.name}\n【電話番号】\n・${formData.phone}\n【性別】\n・${formData.mrCount}\n【ご来院回数】\n・${formData.visitCount}\n\n【希望日時】\n〈第一希望日〉\n${formData.dates[0]}\n\n〈第二希望日〉\n${formData.dates[1]}\n\n【メッセージ】\n⇒${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日のキャンセルは無いようにお願いいたします。');
