--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
         </div>
 
-        <div class="labelContent">メニューをお選びください</div>
+        <div class="labelContent" id="course">メニューをお選びください</div>
         <div class="menu-sections">
             <button type="button" onclick="showMenu('male')">脱毛男性限定</button>
             <button type="button" onclick="showMenu('female')">脱毛女性限定</button>
@@ -776,6 +776,7 @@
                 <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">【脱毛】髭のみ</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">【脱毛】両腕or両足のみ</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">【脱毛】両腕＋両足</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment30')" data-price="15000">眉毛脱毛</button>
             </div>
         </div>
 
@@ -789,6 +790,7 @@
                 <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">腕・足・脇セット</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">脇・VIOセット</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">お好きなパーツ3セット</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment31')" data-price="15000">眉毛脱毛</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment10')" data-price="15000">Sパーツ</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment11')" data-price="15000">Mパーツ</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment12')" data-price="15000">Lパーツ</button>
@@ -807,6 +809,7 @@
                 <button type="button" onclick="selectSymptom(this, 'treatment17')" data-price="15000">HBL+フェイスワックス</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment18')" data-price="15000">HBL+ヘットマッサージ</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment19')" data-price="15000">眉毛スタイリング+フェイスワックス</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment32')" data-price="15000">眉毛WAX＋眉毛脱毛</button>
             </div>
         </div>
 
@@ -991,7 +994,9 @@
             '【脱毛】髭(2年間通い放題)': 30,
             '【脱毛】足(2年間通い放題)': 60,
             '【脱毛】腕(2年間通い放題)': 45,
-            '【女性限定】全身美肌脱毛(2年間通い放題)': 90
+            '【女性限定】全身美肌脱毛(2年間通い放題)': 90,
+            '眉毛WAX＋眉毛脱毛': 90,
+            '眉毛脱毛': 30
         };
 
         let selectedMenuTime = 0;
@@ -1033,7 +1038,7 @@
 
             // メニューが選択されていたら、各メニューを改行して表示
             const selectedSymptomText = selectedSymptom.length > 0
-                ? `<span style="color:#605b55;"><strong>【メニュー】</strong></span><br>${selectedSymptom.join('<br>')}`
+                ? `<span style="color:#605b55;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.join('<br>')}`
                 : '・メニューが未選択です';
 
             // オプションが選択されていたら、各オプションを改行して表示
@@ -1086,7 +1091,7 @@
         <hr>
         <div class="info-row">
             <p>${selectedSymptomText}</p>
-            <button class="edit-button" onclick="scrollToElement('male'); scrollToElement('female'); scrollToElement('whitening');">修正する</button>
+            <button class="edit-button" onclick="scrollToElement('male'); scrollToElement('female'); scrollToElement('eyebrows'); scrollToElement('Matsugepama'); scrollToElement('oilmassage'); scrollToElement('monitor'); scrollToElement('Unlimited');">修正する</button>
         </div>
         <hr>
         <div class="info-row">
