--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         }
 
         .calendar td.selected {
-            background-color: #605b55;
+            background-color: #3fd421;
             color: #fff;
         }
 
