--- a/index.html
+++ b/index.html
@@ -292,11 +292,11 @@
         }
 
         .calendar td:hover {
-            background-color: #63ff44;
+            background-color: #13ca5e;
         }
 
         .calendar td.selected {
-            background-color: #3fd421;
+            background-color: #13ca5e;
             color: #fff;
         }
 
